SERVER-112532 Missing pipeline validation after $lookup cache stage optimization (#43736)

Co-authored-by: Mariano Shaar <mariano.shaar@mongodb.com>
GitOrigin-RevId: c1862a2c00caafa39c8c8c8626896ecda17771fc