jstests/sharding/query/pipeline_length_limit.js
@@ -1,12 +1,15 @@
 /**
- * Confirms that the limit on number of aggregragation pipeline stages is respected.
+ * Confirms that the limit on number of aggregation pipeline stages is respected.
  * @tags: [
- *   requires_fcv_71,
+ *  # In 8.3 we perform an additional pipeline validation after a $lookup cache optimization.
+ *  requires_fcv_83,
  * ]
  */
-import {FixtureHelpers} from "jstests/libs/fixture_helpers.js";
 import {getExpectedPipelineLimit} from "jstests/libs/query/aggregation_pipeline_utils.js";
 import {ShardingTest} from "jstests/libs/shardingtest.js";
+
+const kPreParseErrCode = 7749501;
+const kPostParseErrCode = 5054701;
 
 function testLimits(testDB, lengthLimit) {
     let maxLength = lengthLimit;
@@ -15,9 +18,6 @@ function testLimits(testDB, lengthLimit) {
     // Test that the enforced pre-parse length limit is the same as the post-parse limit.
     // We use $count because it is desugared into two separate stages, so it will pass the pre-parse
     // limit but fail after.
-    let kPreParseErrCode = 7749501;
-    let kPostParseErrCode = 5054701;
-
     // 1. This test case will pass the pre-parse enforcer but fail after.
     assert.commandFailedWithCode(
         testDB.runCommand({
@@ -169,15 +169,20 @@ function testLimits(testDB, lengthLimit) {
                 }),
             ),
     );
+}
+
+function testLimitsWithLookupCache(testDB, lengthLimit) {
+    let maxLength = lengthLimit;
+    let tooLarge = lengthLimit + 1;
+
+    const kPreParseErrCode = 7749501;
+    const kPostParseErrCode = 5054701;
 
     // $lookup inserts a DocumentSourceSequentialDocumentCache stage in the subpipeline to perform
-    // cacheing optimizations, so the subpipeline can have at most 'maxLength - 1' user-specified
-    // stages. When we connect directly to a shard without mongos, it is treated as a standalone
-    // and will not perform pipeline length validation after the cache stage is added.
-    if (FixtureHelpers.isMongos(testDB)) {
-        maxLength = maxLength - 1;
-        tooLarge = tooLarge - 1;
-    }
+    // caching optimizations. We perform pipeline validation again after this, so the
+    // subpipeline can have at most 'maxLength - 1' user-specified stages.
+    maxLength = maxLength - 1;
+    tooLarge = tooLarge - 1;
 
     assert.commandWorked(
         testDB.runCommand({
@@ -188,6 +193,7 @@ function testLimits(testDB, lengthLimit) {
                     $lookup: {from: "test", as: "as", pipeline: new Array(maxLength).fill({$project: {_id: 1}})},
                 },
             ],
+            comment: "lookup maxLength",
         }),
     );
     assert.commandFailedWithCode(
@@ -199,6 +205,7 @@ function testLimits(testDB, lengthLimit) {
                     $lookup: {from: "test", as: "as", pipeline: new Array(tooLarge).fill({$project: {_id: 1}})},
                 },
             ],
+            comment: "lookup tooLarge",
         }),
         [kPostParseErrCode, kPreParseErrCode],
     );
@@ -217,13 +224,48 @@ function runTest(lengthLimit, mongosConfig = {}, mongodConfig = {}) {
     let mongosDB = st.s0.getDB("test");
     assert.commandWorked(mongosDB.test.insert([{}, {}, {}, {}]));
 
-    // Run test against mongos.
+    jsTest.log.info("Running test against mongos");
     testLimits(mongosDB, lengthLimit);
 
-    // Run test against shard.
+    jsTest.log.info("Running test against shard");
     let shard0DB = st.rs0.getPrimary().getDB("test");
     testLimits(shard0DB, lengthLimit);
 
+    st.stop();
+}
+
+function runTestWithLookupCache(lengthLimit, mongosConfig = {}, mongodConfig = {}) {
+    const st = new ShardingTest({
+        shards: 2,
+        rs: {nodes: 1},
+        other: {mongosOptions: mongosConfig, rsOptions: mongodConfig},
+    });
+
+    // Setup sharded collection with predictable document distribution across shards.
+    // This ensures that both shard0 and shard1 have documents to process, which is
+    // required for $lookup to execute its subpipeline logic.
+    assert.commandWorked(st.s0.adminCommand({enablesharding: "test"}));
+    assert.commandWorked(st.s0.adminCommand({shardCollection: "test.test", key: {_id: 1}}));
+    assert.commandWorked(st.s0.adminCommand({split: "test.test", middle: {_id: 2}}));
+
+    const mongosDB = st.s0.getDB("test");
+    mongosDB.test.insertOne({_id: 1, field: "test1"});
+    mongosDB.test.insertOne({_id: 2, field: "test2"});
+    mongosDB.test.insertOne({_id: 3, field: "test3"});
+    mongosDB.test.insertOne({_id: 4, field: "test4"});
+
+    // Explicitly move chunks to ensure predictable shard distribution:
+    // - Shard0 gets documents with _id: 1 (chunk [MinKey, 2))
+    // - Shard1 gets documents with _id: 2, 3, 4 (chunk [2, MaxKey))
+    assert.commandWorked(st.s0.adminCommand({moveChunk: "test.test", find: {_id: 0}, to: st.rs0.getURL()}));
+    assert.commandWorked(st.s0.adminCommand({moveChunk: "test.test", find: {_id: 2}, to: st.rs1.getURL()}));
+
+    jsTest.log.info("Running test against mongos");
+    testLimitsWithLookupCache(mongosDB, lengthLimit);
+
+    jsTest.log.info("Running test against shard");
+    const shard0DB = st.rs0.getPrimary().getDB("test");
+    testLimitsWithLookupCache(shard0DB, lengthLimit);
     st.stop();
 }
 
@@ -240,3 +282,8 @@ st.stop();
 
 // Test with modified pipeline length limit.
 runTest(50, {setParameter: {internalPipelineLengthLimit: 50}}, {setParameter: {internalPipelineLengthLimit: 50}});
+runTestWithLookupCache(
+    50,
+    {setParameter: {internalPipelineLengthLimit: 50}},
+    {setParameter: {internalPipelineLengthLimit: 50}},
+);
